--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 pydantic-settings = "^2.3.4"
 asyncpg = "^0.29.0"
+alembic = "^1.13.2"
+python-slugify = "^8.0.4"
 
 
 [build-system]
