--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pymongo = "^4.8.0"
 beanie = "^1.26.0"
 captcha = "^0.6.0"
 itsdangerous = "^2.2.0"
+passlib = "^1.7.4"
 
 
 [tool.poetry.group.dev.dependencies]
