fix: user response schema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ captcha = "^0.6.0"
 itsdangerous = "^2.2.0"
 passlib = "^1.7.4"
 structlog = "^24.4.0"
+tenacity = "^8.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
