--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ itsdangerous = "^2.2.0"
 passlib = "^1.7.4"
 structlog = "^24.4.0"
 tenacity = "^8.5.0"
+pyjwt = "^2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
