--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ passlib = "^1.7.4"
 structlog = "^24.4.0"
 tenacity = "^8.5.0"
 pyjwt = "^2.8.0"
+emails = "^0.6"
+aiosmtplib = "^3.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
