--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15-alphine
+    image: postgres:15-alpine
     restart: always
     container_name: postgres_db
     environment:
@@ -10,11 +10,11 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      -"5432:5432"
+      - "5432:5432"
     expose:
       - 5432
     volumes:
-      -postgres_data:/var/lib/postgres/data
+      - postgres_data:/var/lib/postgres/data
 
   mongodb:
     image: mongo:latest
@@ -22,18 +22,18 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      -mongo-data:/data/db
+      - mongo-data:/data/db
 
-  web:
-    build: .
-    command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
-    volumes:
-      - .:/code
-    ports:
-      -"8000:8000"
-    depends_on:
-      - db
-      - mongodb
+  # web:
+  #   build: .
+  #   command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+  #   volumes:
+  #     - .:/code
+  #   ports:
+  #     -"8000:8000"
+  #   depends_on:
+  #     - db
+  #     - mongodb
 
   pgadmin:
     container_name: pgadmin
@@ -46,5 +46,5 @@ services:
     depends_on:
       - db
 volumes:
-  postgres_data
-  mongo-data
+  postgres_data:
+  mongo-data:
