--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
-    expose:
-      - 5432
+      - "5431:5432"  # Map port 5431 on host to port 5432 in the container
     volumes:
       - postgres_data:/var/lib/postgres/data
 
@@ -22,18 +20,22 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - mongo_data:/data/db
 
-  # web:
-  #   build: .
-  #   command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
-  #   volumes:
-  #     - .:/code
-  #   ports:
-  #     -"8000:8000"
-  #   depends_on:
-  #     - db
-  #     - mongodb
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile 
+    # command: sh -c "./scripts/run-migration.sh && uvicorn main:app --reload --host 0.0.0.0 --port 8000"
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 8000
+    environment:
+      FULL_DATABASE_PG_URL: ${FULL_DATABASE_PG_URL_DOCKER_COMPOSE}
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
 
   pgadmin:
     container_name: pgadmin
@@ -45,6 +47,69 @@ services:
       - "5050:80"
     depends_on:
       - db
+  
+  prometheus:
+    image: bitnami/prometheus
+    ports:
+      - '9090:9090'
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
+  grafana:
+    image: grafana/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+      - GF_USERS_ALLOW_SIGN_UP=false
+
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+  elasticsearch:
+    image: elasticsearch:5.6-alpine 
+    environment:
+      - http.host=0.0.0.0
+      - transport.host=localhost
+      - network.host=0.0.0.0
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
+
+  graylog:
+    image: graylog/graylog:3.3
+    environment:
+      - GRAYLOG_PASSWORD=${GRAYLOG_PASSWORD}
+      - GRAYLOG_PASSWORD_SHA=${GRAYLOG_PASSWORD_SHA}
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+    depends_on:
+      - mongodb
+      - elasticsearch
+
+    ports:
+      # Graylog web interface and REST API
+      - 9000:9000
+      # Syslog TCP
+      - 1514:1514
+      # Syslog UDP
+      - 1514:1514/udp
+      # GELF TCP
+      - 12201:12201
+      # GELF UDP
+      - 12201:12201/udp
+
 volumes:
   postgres_data:
-  mongo-data:
+  mongo_data:
+  grafana_data: 
+
+# default one
+networks:
+  default:
