--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pyjwt = "^2.8.0"
 emails = "^0.6"
 aiosmtplib = "^3.0.1"
 apscheduler = "^3.10.4"
+prometheus-fastapi-instrumentator = "^7.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
