--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ emails = "^0.6"
 aiosmtplib = "^3.0.1"
 apscheduler = "^3.10.4"
 prometheus-fastapi-instrumentator = "^7.0.0"
+aiofiles = "^24.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
