--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ aiosmtplib = "^3.0.1"
 apscheduler = "^3.10.4"
 prometheus-fastapi-instrumentator = "^7.0.0"
 aiofiles = "^24.1.0"
+httpx = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
